Fix for bugs introduced in previous commits

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")" />
     @*-- CSS files go in this section -- *@
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")" />
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/toastr/toastr.css")" />
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/toastr/build/toastr.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")" />
     @*-- Javascript files go in this section -- *@
     <script data-main="@routes.Assets.versioned("javascripts/main.js")"
