--- a/app/assets/javascripts/centres/components/shipmentsTable/shipmentsTable.html
+++ b/app/assets/javascripts/centres/components/shipmentsTable/shipmentsTable.html
@@ -1,23 +1,6 @@
-<div class="page-header">
-  <h1>{{vm.centre.name}}: <small>Shipping</small></h1>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <h4>Shipments to / from <strong>{{vm.centre.name}}</strong>:</h4>
-  </div>
-</div>
-<div class="row" ng-if="!vm.hasShipments">
-  <div class="col-md-12">
-    <div class="alert alert-warning" role="alert">
-      <p><span class="glyphicon glyphicon-warning-sign"></span>
-        There are no shipments involved with this centre yet.</p>
-    </div>
-  </div>
-</div>
 <table st-table="vm.shipments"
        st-pipe="vm.getTableData"
-       class="table table-hover table-striped"
-       ng-if="vm.hasShipments">
+       class="table table-hover table-striped">
   <thead>
     <tr>
       <th st-sort="courierName">Courier</th>
