WIP: working on receiving shipments

--- a/app/assets/javascripts/centres/components/shipmentAddItems/shipmentAddItems.html
+++ b/app/assets/javascripts/centres/components/shipmentAddItems/shipmentAddItems.html
@@ -7,10 +7,10 @@
     <translate>Add items to ship</translate>
     <div class="btn-group pull-right">
       <button class="btn btn-xs btn-primary"
-              title="{{'All items added and ready to ship'|translate}}"
-              ng-click="vm.allItemsAdded()"
-              translate>
-        All items added
+              title="{{'All items added, ready to mark as packed'|translate}}"
+              ng-click="vm.allItemsAdded()">
+        <translate>Next step</translate>
+        <i class="glyphicon glyphicon-chevron-right"></i>
       </button>
     </div>
   </h1>
