--- a/app/assets/javascripts/centres/components/shipmentView/shipmentView.html
+++ b/app/assets/javascripts/centres/components/shipmentView/shipmentView.html
@@ -1,10 +1,9 @@
 <div ng-switch="vm.shipment.state">
-  <shipment-view-packed ng-switch-when="Packed"   shipment="vm.shipment"></shipment-view-packed>
-  <shipment-view-sent   ng-switch-when="Sent"     shipment="vm.shipment"></shipment-view-sent>
-  <shipment-view-sent   ng-switch-when="Received" shipment="vm.shipment"></shipment-view-received>
+  <shipment-view-packed   ng-switch-when="Packed"   shipment="vm.shipment"></shipment-view-packed>
+  <shipment-view-sent     ng-switch-when="Sent"     shipment="vm.shipment"></shipment-view-sent>
+  <shipment-view-received ng-switch-when="Received" shipment="vm.shipment"></shipment-view-received>
 </div>
-<shipping-info-view
-   shipment="vm.shipment"
-   read-only="true"
-   collapsable="false">
+<shipping-info-view shipment="vm.shipment"
+                    read-only="true"
+                    collapsable="false">
 </shipping-info-view>
